# Geist

./: .gitignore  LICENSE  README.md  __init__.py  config.py  context.py  demo_fractal.py  depth.py  engine.py  loop.py  package.json  protocols.py  pyproject.toml  store.py  time.py
docs/: fractal_lab_extraction.md  install_distribution.md  technical_overview.md
src/geist/: __init__.py  __main__.py  agent.py  cli.py  context.py  provider.py  session.py  trust.py
src/geist/core/: __init__.py
src/geist/core/agent/: __init__.py  decision_parser.py  tool_scheduler.py  tool_spec.py
src/geist/core/fractal/: __init__.py  protocol.py  runtime.py
src/geist/local/: __init__.py  artifact_store.py  dispatcher.py  generated_tools.py  tool_specs.py  trace_store.py  workspace.py
tests/: test_agent_cli_layers.py  test_core_fractal_runtime.py  test_local_substrate.py  test_local_workspace.py
