[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "geist"
version = "0.1.0"
description = "Fractal runtime kernel for liberation-oriented agent systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agent", "llm", "fractal", "runtime", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Source = "https://github.com/your-account/geist"
Tracker = "https://github.com/your-account/geist/issues"

[project.scripts]
geist = "geist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = false
